<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202125"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitleApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/basic_calculator"
        android:textColor="#FF9800"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="404dp"
        android:layout_height="615dp"
        android:background="#201F1F"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvSolution"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:textAlignment="textEnd"
            android:textColor="#F6F5F5"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="20dp"
            android:hint="0"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="50sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnClear"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="308dp"
                android:text="@string/clear"
                android:textColor="#FF9800"
                android:textSize="30sp"
                app:cornerRadius="200dp" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="308dp"
                android:textColor="#FF9800"
                android:text="@string/delete"
                android:textSize="30sp"
                app:cornerRadius="200dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnModulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="308dp"
                android:textColor="#FF9800"
                android:text="@string/modulo"
                android:textSize="30sp"
                app:cornerRadius="200dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="308dp"
                android:textColor="#FF9800"
                android:text="@string/divide"
                android:textSize="30sp"
                app:cornerRadius="200dp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="308dp"
                android:textColor="@color/white"
                android:text="@string/seven"
                android:textSize="30sp"
                app:cornerRadius="200dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnEight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="308dp"
                android:textColor="@color/white"
                android:text="@string/eight"
                android:textSize="30sp"
                app:cornerRadius="200dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnNine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="308dp"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:cornerRadius="200dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="308dp"
                android:textColor="#FF9800"
                android:text="@string/multiply"
                android:textAllCaps="false"
                android:textSize="30sp"
                app:cornerRadius="200dp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="308dp"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:cornerRadius="200dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="308dp"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:cornerRadius="200dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnSix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="308dp"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:cornerRadius="200dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="308dp"
                android:textColor="#FF9800"
                android:text="@string/minus"
                android:textSize="30sp"
                app:cornerRadius="200dp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:layout_marginBottom="308dp"
                android:text="@string/one"
                android:textSize="30sp"
                app:cornerRadius="200dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="308dp"
                android:textColor="@color/white"
                android:text="@string/two"
                android:textSize="30sp"
                app:cornerRadius="200dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="308dp"
                android:textColor="@color/white"
                android:text="@string/three"
                android:textSize="30sp"
                app:cornerRadius="200dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="308dp"
                android:textColor="#FF9800"
                android:text="@string/plus"
                android:textSize="30sp"
                app:cornerRadius="200dp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnZero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="308dp"
                android:textColor="@color/white"
                android:text="@string/zero"
                android:textSize="30sp"
                app:cornerRadius="200dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnDot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="308dp"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:text="@string/dot"
                app:cornerRadius="200dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnEqual"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="308dp"
                android:backgroundTint="#FF9800"
                android:textColor="@color/white"
                android:text="@string/equal"
                android:textSize="30sp"
                app:cornerRadius="200dp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>